# KerjaSini

./: .gitignore  README.md  cargo.toml  cert.pem  key.pem
client/: Cargo.toml  dockerfile
client/src/: handler.rs  main.rs  mainlogin.rs  signup.rs
clientvue/: README.md  package-lock.json  package.json
clientvue/src/: App.vue
clientvue/src/assets/: base.css
clientvue/src/components/: Header.vue  MainLogin.vue
clientvue/src/components/general/: button.vue
clientvue/src/router/: index.js
clientvue/src/views/: HomeView.vue  MainLogin.vue
clientvue/src/views/login/: EmployeeLoginForm.vue  EmployerLoginForm.vue
clientvue/src/views/signup/: EmployeeSignup.vue  EmployerSignup.vue
server/: Cargo.toml  dockerfile
server/src/: database.rs  error.rs  handler.rs  login_signup.rs  main.rs  messages.rs  warehouse.rs  ws.rs
server/static/: index.html
