[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.15.0"
tokio = { version = "1", features = ["full"] }
eframe = "0.15.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["v110"] }
bytes = "1"
rust-argon2 = "1.0"
password-hash = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }