[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
tiberius = "0.9.2"
dotenv = "0.15.0"
bb8-tiberius = "0.11.0"
bb8 = "0.8.0"
bytes = "1"
uuid = {  version = "1.1.2", features = ["v4"] }
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-files = "0.6"